[gd_scene load_steps=13 format=3 uid="uid://d1l6uqhn4bxu5"]

[ext_resource type="Script" uid="uid://dkrp53oye2q2n" path="res://main_menu.gd" id="1_nlkkf"]
[ext_resource type="Texture2D" uid="uid://b8ow8qx6b36uq" path="res://images/escenario/TO_MUCH_AZUCAR_SCREEN.png" id="2_j5v2v"]
[ext_resource type="PackedScene" uid="uid://bt5yvtupjskyu" path="res://components/UIButton.tscn" id="2_nlkkf"]
[ext_resource type="Script" uid="uid://ckb3jel7owg8g" path="res://components/LabelVersion.gd" id="3_qe12f"]
[ext_resource type="Script" uid="uid://pq4k5q0rtju2" path="res://options.gd" id="4_8qtwp"]
[ext_resource type="Theme" uid="uid://buorrie1vc8nq" path="res://styles/toomuchazucar_theme.tres" id="5_0k4wn"]
[ext_resource type="PackedScene" uid="uid://cejihvefiegin" path="res://components/sound_slider.tscn" id="5_dy7ct"]
[ext_resource type="Texture2D" uid="uid://bkhvfjpghpxe3" path="res://images/star.png" id="6_dy7ct"]
[ext_resource type="StyleBox" uid="uid://lsn48mo682dy" path="res://styles/button_flat.tres" id="6_j5v2v"]
[ext_resource type="Script" path="res://components/BoingComponent.gd" id="6_nlkkf"]
[ext_resource type="Texture2D" uid="uid://s1drnpjd7q5y" path="res://images/musicOn.png" id="7_0o4t1"]
[ext_resource type="Texture2D" uid="uid://ca028dc6kwjdu" path="res://images/audioOn.png" id="8_0k4wn"]

[node name="MainMenu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlkkf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j5v2v")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = 63.0
offset_right = 51.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="PlayButton" parent="VBoxContainer" instance=ExtResource("2_nlkkf")]
layout_mode = 2
text = "BAILAR"

[node name="ConfigButton" parent="VBoxContainer" instance=ExtResource("2_nlkkf")]
layout_mode = 2
text = "OPCIONES"

[node name="ControlsButton" parent="VBoxContainer" instance=ExtResource("2_nlkkf")]
layout_mode = 2
text = "CONTROLES"

[node name="LabelVersion" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -40.0
offset_right = -19.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2
script = ExtResource("3_qe12f")

[node name="AGame" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -561.0
offset_top = 220.0
offset_right = -24.0
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2
text = "
"

[node name="ConfigContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = -84.0
offset_right = 244.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(243, 196)
theme = ExtResource("5_0k4wn")
theme_override_styles/panel = ExtResource("6_j5v2v")
script = ExtResource("4_8qtwp")

[node name="MarginContainer" type="MarginContainer" parent="ConfigContainer"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 22

[node name="VBoxContainer" type="VBoxContainer" parent="ConfigContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="MasterContainer" parent="ConfigContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_dy7ct")]
layout_mode = 2

[node name="TextureRect" parent="ConfigContainer/MarginContainer/VBoxContainer/MasterContainer" index="0"]
texture = ExtResource("6_dy7ct")

[node name="MusicContainer" parent="ConfigContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_dy7ct")]
layout_mode = 2

[node name="TextureRect" parent="ConfigContainer/MarginContainer/VBoxContainer/MusicContainer" index="0"]
texture = ExtResource("7_0o4t1")

[node name="SoundContainer" parent="ConfigContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_dy7ct")]
layout_mode = 2

[node name="TextureRect" parent="ConfigContainer/MarginContainer/VBoxContainer/SoundContainer" index="0"]
texture = ExtResource("8_0k4wn")

[node name="CenterContainer" type="CenterContainer" parent="ConfigContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UiButton" parent="ConfigContainer/MarginContainer/VBoxContainer/CenterContainer" instance=ExtResource("2_nlkkf")]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
text = "VOLVER"

[node name="BoingComponent" type="Node" parent="ConfigContainer"]
script = ExtResource("6_nlkkf")

[node name="ControlsContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -247.5
offset_right = 282.0
offset_bottom = 247.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(282, 247)
theme = ExtResource("5_0k4wn")
theme_override_styles/panel = ExtResource("6_j5v2v")

[node name="MarginContainer" type="MarginContainer" parent="ControlsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 22

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "El maestro de la pista os ha condenado a bailar eternamente hasta la perfección.
Os llegarán los pasos que guiarán vuestros pies desde ambos lados de la pantalla 
y deberéis actuar pulsando la flecha correspondiente al lado de donde llegue la nota, 
en el momento exacto.
Si no lo hacéis perfecto tendréis que volver a empezar cada sección de la canción."

[node name="CenterContainer2" type="CenterContainer" parent="ControlsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UiButton" parent="ControlsContainer/MarginContainer/VBoxContainer/CenterContainer2" instance=ExtResource("2_nlkkf")]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
text = "VOLVER"

[node name="BoingComponent" type="Node" parent="ControlsContainer"]
script = ExtResource("6_nlkkf")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="visibility_changed" from="ConfigContainer" to="ConfigContainer" method="_on_visibility_changed"]
[connection signal="value_changed" from="ConfigContainer/MarginContainer/VBoxContainer/MasterContainer" to="ConfigContainer" method="_on_master_container_value_changed"]
[connection signal="value_changed" from="ConfigContainer/MarginContainer/VBoxContainer/MusicContainer" to="ConfigContainer" method="_on_music_container_value_changed"]
[connection signal="value_changed" from="ConfigContainer/MarginContainer/VBoxContainer/SoundContainer" to="ConfigContainer" method="_on_sound_container_value_changed"]
[connection signal="pressed" from="ConfigContainer/MarginContainer/VBoxContainer/CenterContainer/UiButton" to="ConfigContainer" method="hide"]
[connection signal="pressed" from="ControlsContainer/MarginContainer/VBoxContainer/CenterContainer2/UiButton" to="ControlsContainer" method="hide"]

[editable path="ConfigContainer/MarginContainer/VBoxContainer/MasterContainer"]
[editable path="ConfigContainer/MarginContainer/VBoxContainer/MusicContainer"]
[editable path="ConfigContainer/MarginContainer/VBoxContainer/SoundContainer"]
[editable path="ConfigContainer/MarginContainer/VBoxContainer/CenterContainer/UiButton"]
[editable path="ControlsContainer/MarginContainer/VBoxContainer/CenterContainer2/UiButton"]
